--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
-    "start": "npm-run-all --parallel test:watch start:dev",
+    "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
     "build": "babel-node tools/build.js",
@@ -39,7 +39,6 @@
   "dependencies": {
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "axios": "^0.16.1",
-    "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "express": "^4.14.1",
@@ -69,6 +68,7 @@
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
