--- a/package.json
+++ b/package.json
@@ -50,14 +50,15 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^3.4.3",
-    "@storybook/addon-actions": "^3.4.2",
-    "@storybook/addon-info": "^3.4.2",
-    "@storybook/addon-knobs": "^3.4.2",
-    "@storybook/addon-links": "^3.4.2",
-    "@storybook/addon-notes": "^3.4.2",
-    "@storybook/react": "^3.4.2",
-    "@storybook/storybook-deployer": "^2.3.0",
+    "@storybook/addon-a11y": "^5.0.0",
+    "@storybook/addon-actions": "^5.0.0",
+    "@storybook/addon-info": "^5.0.0",
+    "@storybook/addon-knobs": "^5.0.0",
+    "@storybook/addon-links": "^5.0.0",
+    "@storybook/addon-notes": "^5.0.0",
+    "@storybook/react": "^5.0.0",
+    "@storybook/storybook-deployer": "^2.8.1",
+    "@storybook/theming": "^5.0.0",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -85,7 +86,7 @@
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^1.3.1",
     "isparta": "^4.0.0",
@@ -103,7 +104,7 @@
     "nock": "^9.0.2",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^3.0.0",
     "prettier": "1.16.4",
     "prop-types": "^15.5.3",
     "react-addons-test-utils": "^15.5.3",
@@ -120,6 +121,7 @@
     "version-bump-prompt": "^3.1.0",
     "watch": "^1.0.2",
     "webpack": "^2.7.0",
+    "webpack-blocks": "^2.0.0-rc",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.4.1",
