--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^5.0.0",
-    "@storybook/addon-actions": "^5.0.0",
-    "@storybook/addon-info": "^5.0.0",
-    "@storybook/addon-knobs": "^5.0.0",
-    "@storybook/addon-links": "^5.0.0",
-    "@storybook/addon-notes": "^5.0.0",
-    "@storybook/react": "^5.0.0",
+    "@storybook/addon-a11y": "^5.0.1",
+    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-info": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.1",
+    "@storybook/addon-links": "^5.0.1",
+    "@storybook/addon-notes": "^5.0.1",
+    "@storybook/react": "^5.0.1",
     "@storybook/storybook-deployer": "^2.8.1",
-    "@storybook/theming": "^5.0.0",
+    "@storybook/theming": "^5.0.1",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -120,7 +120,7 @@
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
     "watch": "^1.0.2",
-    "webpack": "^2.7.0",
+    "webpack": "^3.12.0",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
@@ -129,7 +129,5 @@
     "webpack-md5-hash": "^0.0.5",
     "webpack-node-externals": "^1.5.4"
   },
-  "dependencies": {
-    "@hackoregon/civic-server": "0.0.10"
-  }
+  "dependencies": {}
 }
