--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -59,25 +59,26 @@
     "d3-shape": "^1.0.6",
     "deck.gl": "^5.2.5",
     "emotion": "^9.1.1",
+    "mapbox-gl": "^0.53.1",
     "prop-types": "^15.6.1",
     "ramda": "^0.23.0",
     "rc-slider": "^7.0.2",
     "react": "^15.5.3",
     "react-addons-transition-group": "^15.5.3",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^15.5.3",
     "react-faux-dom": "^3.0.1",
-    "react-map-gl": "^3.2.7",
-    "react-map-gl-geocoder": "^1.2.1",
+    "react-leaflet": "^1.1.6",
+    "react-map-gl": "3.3.0",
+    "react-map-gl-geocoder": "jaronheard/react-map-gl-geocoder#master",
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.3",
     "react-selectize": "^2.1.0",
     "react-share": "^2.2.0",
     "recharts": "^0.22.1",
-    "victory": "^0.26.0",
-    "webpack-blocks": "^1.0.0",
-    "react-leaflet": "^1.1.6",
-    "react-dimensions": "^1.3.1",
     "styled-components": "^1.4.2",
-    "react-select": "^1.0.0-rc.3"
+    "victory": "^0.26.0",
+    "webpack-blocks": "^1.0.0"
   }
 }
