--- a/packages/webpack-common/package.json
+++ b/packages/webpack-common/package.json
@@ -17,5 +17,8 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.1.0"
   }
 }
