--- a/packages/2018-local-elections/package.json
+++ b/packages/2018-local-elections/package.json
@@ -51,11 +51,11 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/node": "^7.0.0",
+    "@babel/core": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
