--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -27,6 +27,9 @@
     "nuka-carousel": "^4.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
@@ -34,7 +37,6 @@
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-cli": "^6.24.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-emotion": "^9.1.1",
@@ -48,9 +50,9 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
   }
