--- a/packages/homelessness/.babelrc
+++ b/packages/homelessness/.babelrc
@@ -1,24 +1,3 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-1"
-  ],
-  "env": {
-    "development": {
-      "plugins": ["react-hot-loader/babel", "transform-class-properties"],
-    },
-    "production": {
-      "plugins": [
-        "transform-class-properties",
-        "transform-react-constant-elements",
-        "transform-react-remove-prop-types"
-      ]
-    },
-    "test": {
-      "plugins": [
-        "transform-es2015-modules-commonjs"
-      ]
-    }
-  }
+  "extends": "@hackoregon/civic-babel-presets/.babelrc"
 }
