--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -75,6 +75,7 @@
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "^1.3.1",
     "eslint": "^3.19.0",
     "istanbul": "^0.4.4",
     "jest": "^24.5.0",
