--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -77,6 +77,7 @@
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "^1.3.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-babel": "^4.0.1",
