--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -106,6 +106,7 @@
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "1.3.1",
     "istanbul": "^0.4.4",
     "jest": "^24.5.0",
     "jsdom": "^14.0.0",
