--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -78,6 +78,7 @@
     "colors": "^1.1.2",
     "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "^1.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^0.4.4",
     "jest": "^24.5.0",
