--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -78,6 +78,7 @@
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "1.3.1",
     "eslint": "^3.19.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "istanbul": "^0.4.4",
