--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -121,6 +121,7 @@
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "recharts": "^0.20.1",
     "redux-immutable-state-invariant": "^1.2.4",
