--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -93,6 +93,7 @@
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^4.0.0",
+    "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
