--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -75,9 +75,11 @@
     "d3-format": "1.3.0",
     "d3-sankey": "^0.4.2",
     "d3-shape": "^1.0.6",
+    "d3-time-format": "^2.1.3",
     "deck.gl": "^5.2.5",
     "emotion": "^9.1.1",
     "enzyme-adapter-react-15": "^1.3.1",
+    "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.1",
     "prop-types": "^15.6.1",
     "ramda": "^0.23.0",
