--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -21,10 +21,11 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
+    "@hackoregon/component-library": "^2.0.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
-    "nuka-carousel": "^4.4.1"
+    "nuka-carousel": "^4.4.1",
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -32,7 +33,6 @@
     "@babel/node": "^7.2.2",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
