--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -21,17 +21,17 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
-    "@hackoregon/component-library": "^2.0.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
-    "nuka-carousel": "^4.4.1",
+    "nuka-carousel": "^4.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/register": "^7.0.0",
+    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
