--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "private": true,
   "scripts": {
-    "bootstrap": "yarn install --frozen-lockfile && lerna bootstrap",
+    "bootstrap": "yarn install --frozen-lockfile",
     "build": "lerna run build",
     "configure": "lerna run configure",
     "tag": "lerna publish --skip-npm",
@@ -32,9 +32,9 @@
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "link:all": "lerna link",
-    "lint": "lerna run lint -- --fix",
+    "lint": "lerna run lint -- --fix --no-bail",
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
-    "test": "lerna run test",
+    "test": "lerna run test --no-bail",
     "travis": "make travis",
     "pretty": "prettier --write \"./**/*.{js,jsx,css,md}\"",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
