--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,css,md}": [
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{css,md}": [
       "prettier --write",
       "git add"
     ]
