--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,jsx,css,md}": [
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{css,md}": [
       "prettier --write",
       "git add"
     ]
