--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -105,8 +105,8 @@
     "colors": "^1.1.2",
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-15": "1.3.1",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.11.2",
     "jest": "^24.5.0",
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
