--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -77,8 +77,8 @@
     "colors": "^1.1.2",
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-15": "1.3.1",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.11.2",
     "eslint": "^5.15.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^24.5.0",
