--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -77,7 +77,7 @@
     "d3-sankey": "^0.4.2",
     "d3-shape": "^1.0.6",
     "d3-time-format": "^2.1.3",
-    "deck.gl": "^5.2.5",
+    "deck.gl": "^6.4.7",
     "emotion": "^10.0.6",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.1",
@@ -90,8 +90,8 @@
     "react-dom": "^16.8.4",
     "react-faux-dom": "^3.0.1",
     "react-leaflet": "^1.1.6",
-    "react-map-gl": "3.3.0",
-    "react-map-gl-geocoder": "jaronheard/react-map-gl-geocoder#master",
+    "react-map-gl": "4.1.1",
+    "react-map-gl-geocoder": "^1.7.0",
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.3",
