--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && yarn --cwd ./packages/component-library/ build && yarn --cwd ./packages/mock-wrapper/ build",
     "build": "lerna run build",
-    "card": "yarn hygen api-story-card with-prompt",
-    "card:local-data": "yarn hygen local-data-story-card with-prompt",
+    "card": "yarn hygen api-story-card with-prompt && yarn bootstrap",
+    "card:local-data": "yarn hygen local-data-story-card with-prompt && yarn bootstrap",
     "configure": "lerna run configure",
     "publish-patch": "lerna publish bump patch --yes",
     "publish-minor": "lerna publish bump minor --yes",
