--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -94,10 +94,12 @@
     "react-dom": "^16.8.4",
     "react-map-gl": "4.1.1",
     "react-map-gl-geocoder": "^1.7.0",
-    "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.3",
     "react-share": "^2.2.0",
     "victory": "^32.0.2"
+  },
+  "peerDependencies": {
+    "react-router": "^3.0.0"
   },
   "gitHead": "b50f7a7fca617964ade5a3ecb5225fee17b20fe4"
 }
