--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && yarn --cwd ./packages/component-library/ build && yarn --cwd ./packages/mock-wrapper/ build",
     "build": "lerna run build",
+    "new-package": "yarn hygen package-generator with-prompt && yarn bootstrap",
     "card": "yarn hygen api-story-card with-prompt && yarn bootstrap",
     "card:local-data": "yarn hygen local-data-story-card with-prompt && yarn bootstrap",
     "configure": "lerna run configure",
