--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
+    "@hackoregon/2019-education": "^1.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@hackoregon/2018-disaster-resilience": "^3.0.0",
