--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -84,6 +84,7 @@
     "d3-time-format": "^2.1.3",
     "deck.gl": "^6.4.7",
     "emotion": "^10.0.9",
+    "emotion-theming": "^10.0.14",
     "global": "^4.3.2",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.1",
