--- a/packages/civic-sandbox/package.json
+++ b/packages/civic-sandbox/package.json
@@ -39,6 +39,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
+    "lodash": "4.17.11",
     "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
