--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -46,6 +46,15 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@storybook/addon-a11y": "^5.0.6",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-info": "^5.0.6",
+    "@storybook/addon-knobs": "^5.0.6",
+    "@storybook/addon-links": "^5.0.6",
+    "@storybook/addon-notes": "^5.0.6",
+    "@storybook/addon-storysource": "5.0.6",
+    "@storybook/addon-viewport": "^5.0.11",
+    "@storybook/react": "^5.0.6",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
