--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   "env": {
     "mocha": true
   },
-  "plugins": ["react", "prettier", "emotion"],
+  "plugins": ["react", "prettier", "emotion","react-hooks"],
   "rules": {
     "emotion/jsx-import": "error",
     "emotion/no-vanilla": "warn",
@@ -23,7 +23,9 @@
       {
         "devDependencies": ["**/*.story.js", "**/*.test.js"]
       }
-    ]
+    ],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "globals": {
     "__DEV__": true,
