--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-watch": "^5.0.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
