--- a/packages/2018-example-farmers-markets/package.json
+++ b/packages/2018-example-farmers-markets/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@hackoregon/component-library": "^4.0.0",
+    "@emotion/core": "^10.0.10",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
