--- a/packages/2018-local-elections/package.json
+++ b/packages/2018-local-elections/package.json
@@ -29,7 +29,7 @@
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
-    "test:watch": "yarn test -w",    
+    "test:watch": "yarn test -w",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -38,7 +38,7 @@
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
-    "emotion": "^10.0.9",
+    "@emotion/core": "^10.0.10",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "lodash": "^4.17.11",
