--- a/packages/2018-neighborhood-development/package.json
+++ b/packages/2018-neighborhood-development/package.json
@@ -39,7 +39,7 @@
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
     "d3-time-format": "^2.1.3",
-    "emotion": "^10.0.9",
+    "@emotion/core": "^10.0.10",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "lodash": "^4.17.11",
