--- a/packages/mock-wrapper/package.json
+++ b/packages/mock-wrapper/package.json
@@ -22,7 +22,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "10.0.10",
+    "@emotion/core": "^10.0.10",
     "@hackoregon/civic-babel-presets": "^3.0.0",
     "@hackoregon/component-library": "^4.0.0",
     "prop-types": "^15.7.2",
