--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -85,6 +85,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "@turf/center-of-mass": "^6.0.1",
     "copy-to-clipboard": "^3.0.5",
     "create-react-ref": "^0.1.0",
