--- a/packages/2019-transportation/package.json
+++ b/packages/2019-transportation/package.json
@@ -32,8 +32,6 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "reduxful": "^1.2.2",
-    "cross-fetch": "^3.0.4",
     "@emotion/core": "^10.0.10",
     "@hackoregon/component-library": "^4.0.0",
     "@hackoregon/dev-server": "^3.0.0",
@@ -42,6 +40,8 @@
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
+    "cross-fetch": "^3.0.4",
+    "d3-array": "^2.3.1",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "prop-types": "^15.7.2",
@@ -54,6 +54,7 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.1.0",
+    "reduxful": "^1.2.2",
     "reselect": "^3.0.0"
   },
   "devDependencies": {
