--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -24,8 +24,6 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
-    "@hackoregon/2019-elections": "^1.0.0",
-    "@hackoregon/2019-education": "^1.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@hackoregon/2018-disaster-resilience": "^3.0.0",
@@ -34,6 +32,8 @@
     "@hackoregon/2018-local-elections": "^3.0.0",
     "@hackoregon/2018-neighborhood-development": "^3.0.0",
     "@hackoregon/2018-transportation-systems": "^3.0.0",
+    "@hackoregon/2019-education": "^1.0.0",
+    "@hackoregon/2019-elections": "^1.0.0",
     "@hackoregon/2019-housing": "^1.0.0",
     "@hackoregon/2019-template": "^1.0.0",
     "@hackoregon/2019-transportation": "^1.0.0",
@@ -41,6 +41,7 @@
     "@hackoregon/component-library": "^4.0.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
+    "emotion-reset": "^2.0.2",
     "express": "^4.14.1",
     "nuka-carousel": "^4.5.3",
     "prop-types": "^15.7.2",
