--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
       "git add"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/styles": "^4.3.3"
+  },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
