--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -85,6 +85,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "@material-ui/core": "^4.1.3",
+    "@turf/bbox": "^6.0.1",
     "@turf/center-of-mass": "^6.0.1",
     "copy-to-clipboard": "^3.0.5",
     "create-react-ref": "^0.1.0",
@@ -106,7 +107,8 @@
     "react-select": "^1.0.0-rc.3",
     "react-share": "^2.2.0",
     "shortid": "^2.2.14",
-    "victory": "^32.0.2"
+    "victory": "^32.0.2",
+    "viewport-mercator-project": "^6.2.0"
   },
   "peerDependencies": {
     "react-router": "^3.0.0"
