--- a/packages/project-disaster-trail/package.json
+++ b/packages/project-disaster-trail/package.json
@@ -44,6 +44,7 @@
     "emotion": "^10.0.9",
     "express": "^4.14.1",
     "gsap": "^2.1.3",
+    "howler": "^2.1.2",
     "invariant": "^2.2.2",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
