--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -24,9 +24,6 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
-    "@hackoregon/2019-housing": "^1.0.0",
-    "@hackoregon/2019-elections": "^1.0.0",
-    "@hackoregon/2019-education": "^1.0.0",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@hackoregon/2018-disaster-resilience": "^3.0.0",
@@ -35,12 +32,17 @@
     "@hackoregon/2018-local-elections": "^3.0.0",
     "@hackoregon/2018-neighborhood-development": "^3.0.0",
     "@hackoregon/2018-transportation-systems": "^3.0.0",
+    "@hackoregon/2019-education": "^1.0.0",
+    "@hackoregon/2019-elections": "^1.0.0",
+    "@hackoregon/2019-housing": "^1.0.0",
     "@hackoregon/2019-template": "^1.0.0",
     "@hackoregon/2019-transportation": "^1.0.0",
     "@hackoregon/civic-sandbox": "^3.0.0",
     "@hackoregon/component-library": "^4.0.0",
+    "@material-ui/core": "^4.4.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
+    "emotion-reset": "^2.0.2",
     "express": "^4.14.1",
     "lodash": "^4.17.15",
     "nuka-carousel": "^4.5.3",
