--- a/packages/2019-transportation/package.json
+++ b/packages/2019-transportation/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^5.2.0",
     "cross-fetch": "^3.0.4",
     "d3-array": "^2.3.1",
+    "d3-scale": "^3.1.0",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "prop-types": "^15.7.2",
