--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -40,6 +40,7 @@
     "@hackoregon/civic-sandbox": "^3.0.0",
     "@hackoregon/component-library": "^4.0.0",
     "@material-ui/core": "^4.4.0",
+    "@material-ui/styles": "^4.4.1",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "emotion-reset": "^2.0.2",
