--- a/packages/2019-disaster-game/Dockerfile
+++ b/packages/2019-disaster-game/Dockerfile
@@ -9,6 +9,12 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update && apt-get install -y yarn
 
+# Copy and clean the package.json file to remove invalid
+# packages since this won't be associated to the workspace
+COPY package*.json ./
+COPY clean-packages.js clean-packages.js
+RUN node clean-packages.js
+
 # Instal dependencies
 RUN yarn install --production=true
 
