--- a/packages/2019-disaster-game/package.json
+++ b/packages/2019-disaster-game/package.json
@@ -38,6 +38,7 @@
     "@hackoregon/component-library": "^4.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
+    "@hackoregon/dev-server": "^3.0.0",    
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
