--- a/packages/2019-disaster-game/package.json
+++ b/packages/2019-disaster-game/package.json
@@ -26,8 +26,8 @@
     "clean": "rimraf ./build && mkdir build",
     "start": "yarn start:dev",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
-    "start:dev": "cross-env NODE_ENV=development babel-node server",
-    "start:prod": "cross-env NODE_ENV=production node server",
+    "start:dev": "cross-env NODE_ENV=development babel-node server/dev.js",
+    "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "yarn test -w",
     "lint": "eslint src"
