--- a/packages/2019-disaster-game/package.json
+++ b/packages/2019-disaster-game/package.json
@@ -40,6 +40,7 @@
     "@hackoregon/webpack-common": "^3.0.0",
     "@hackoregon/dev-server": "^3.0.0",    
     "axios": "^0.18.0",
+    "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
     "emotion": "^10.0.9",
