--- a/.yarnrc
+++ b/.yarnrc
@@ -4,4 +4,4 @@
 
 lastUpdateCheck 1570032146687
 workspaces-experimental true
-yarn-path ".yarn\\releases\\yarn-1.19.0.js"
+yarn-path ".yarn/releases/yarn-1.19.0.js"
