--- a/packages/2019-disaster-game/package.json
+++ b/packages/2019-disaster-game/package.json
@@ -36,9 +36,9 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.14",
     "@hackoregon/component-library": "^4.0.0",
+    "@hackoregon/dev-server": "^3.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
-    "@hackoregon/dev-server": "^3.0.0",    
     "axios": "^0.18.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
@@ -54,6 +54,7 @@
     "react": "^16.8.4",
     "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.4",
+    "react-move": "^6.0.0",
     "react-redux": "^6.0.1",
     "react-router": "^3.2.4",
     "react-router-dom": "^5.0.1",
