--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -96,6 +96,7 @@
     "d3-time-format": "^2.1.3",
     "deck.gl": "^6.4.7",
     "emotion-theming": "^10.0.14",
+    "formik": "^2.0.4",
     "global": "^4.3.2",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.1",
@@ -110,7 +111,8 @@
     "react-share": "^2.2.0",
     "shortid": "^2.2.14",
     "victory": "^32.0.2",
-    "viewport-mercator-project": "^6.2.0"
+    "viewport-mercator-project": "^6.2.0",
+    "yup": "^0.27.0"
   },
   "peerDependencies": {
     "react-router": "^3.2.4"
