--- a/packages/civic-sandbox/package.json
+++ b/packages/civic-sandbox/package.json
@@ -51,7 +51,8 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.0"
+    "reselect": "^3.0.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
